Got tablet page designed

--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,192 @@
 /* Use your own code or past solution for Great Idea Web Page CSS here! */
 
 
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* Set every element's box-sizing to border-box */
+* {
+    box-sizing: border-box;
+}
+
+html, body {
+    height: 100%;
+    font-family: 'Titillium Web', sans-serif;
+}
+
+h1, h2, h3, h4, h5 {
+    font-family: 'Bangers', cursive;
+    letter-spacing: 1px;
+    margin-bottom: 15px;
+}
+
+.container {
+	width: 90%;
+	margin: 0 auto;
+}
+
+
+/* Header Rules */
+
+.container header {
+	border-bottom: 1.5px solid black;
+	padding: 50px 0;
+	margin-bottom: 75px;
+}
+
+header div.header-content {
+	display: flex;
+	text-align: center;
+	align-items: center;
+    justify-content: space-around;
+}
+
+header div.header-content div {
+	width: 50%;
+}
+
+@media (max-width: 800px) {
+    header div.header-content div {
+    	width: 100%;
+        padding-right: 0;
+    }
+
+    .header-img {
+        display: none;
+    }
+}
+
+header button {
+	background: white;
+	border: 1px solid black;
+	padding: 8px 20px;
+	width: 150px;
+	border-radius: 20px;
+	cursor: pointer;
+  transition-duration: 0.5s;
+	margin-top: 40px;
+}
+
+header button:hover {
+	background-color: #9cb0d1;
+}
+
+header .slogan {
+	font-size: 75px;
+}
+
+/* Navbar */
+
+
+
+.navbar-container {
+	display: flex;
+	align-items: center;
+    justify-content: space-around;
+    margin-bottom: 50px;
+}
+
+@media(max-width: 800px) {
+    .navbar-container {
+        flex-direction: column-reverse;
+    }
+    .navbar-container nav {
+        margin-top: 50px;
+    }
+}
+
+.navbar-container nav {
+    display: flex;
+    width: 95%;
+    justify-content: space-around;
+}
+
+.navbar-container nav a{
+	text-decoration: none;
+    color: gray;
+}
+
+/* Main Content Area */
+
+.main-content .top-content	{
+	display: flex;
+	padding-bottom: 50px;
+}
+
+.main-content .top-content h3 {
+
+}
+
+.main-content .bottom-content {
+	border-bottom: 1.5px solid black;
+	margin: 50px 0;
+	display: flex;
+	padding-bottom: 50px;
+}
+
+.main-content img {
+	width: 100%;
+}
+
+/* Footer Styles */
+footer {
+	display: flex;
+	flex-direction: column;
+}
+
+footer p {
+	margin-bottom: 20px;
+}
+
+footer p.copyright {
+	display: flex;
+	justify-content: center;
+	margin: 50px 0;
+	font-family: 'Staatliches', cursive;
+}
