--- a/css/index.css
+++ b/css/index.css
@@ -91,6 +91,7 @@ header div.header-content div {
 	width: 50%;
 }
 
+
 @media (max-width: 800px) {
     header div.header-content div {
     	width: 100%;
@@ -101,6 +102,17 @@ header div.header-content div {
         display: none;
     }
 }
+
+@media (max-width: 500px) {
+    header div.header-content div {
+    	width: 100%;
+    }
+
+    .header-img {
+        display: none;
+    }
+}
+
 
 header button {
 	background: white;
@@ -128,8 +140,18 @@ header .slogan {
 .navbar-container {
 	display: flex;
 	align-items: center;
-    justify-content: space-around;
     margin-bottom: 50px;
+}
+
+.navbar-container nav {
+    display: flex;
+    width: 95%;
+    justify-content: space-between;
+
+}
+
+.navbar-container img {
+    margin-left: 120px;
 }
 
 @media(max-width: 800px) {
@@ -138,13 +160,30 @@ header .slogan {
     }
     .navbar-container nav {
         margin-top: 50px;
+
+    }
+
+    .navbar-container img {
+        margin-left: 0;
     }
 }
 
-.navbar-container nav {
-    display: flex;
-    width: 95%;
-    justify-content: space-around;
+@media(max-width: 500px) {
+    .navbar-container nav{
+        flex-direction: column;
+        text-align: center;
+
+    }
+
+    .navbar-container nav a{
+        padding: 10px 0;
+        border: 1px solid gray;
+        width: 100%;
+    }
+
+    .navbar-container img {
+        margin-left: 0;
+    }
 }
 
 .navbar-container nav a{
@@ -157,21 +196,37 @@ header .slogan {
 .main-content .top-content	{
 	display: flex;
 	padding-bottom: 50px;
+    /* flex-wrap: wrap; */
 }
 
-.main-content .top-content h3 {
 
+
+@media(max-width: 500px) {
+    .main-content  .top-content, .bottom-content{
+        flex-direction: column;
+    }
+    .main-content  div {
+        margin: 25px;
+    }
 }
 
 .main-content .bottom-content {
 	border-bottom: 1.5px solid black;
-	margin: 50px 0;
+	margin: 25px 0;
 	display: flex;
 	padding-bottom: 50px;
 }
 
 .main-content img {
 	width: 100%;
+    display: block;
+}
+
+@media(max-width: 500px) {
+    .main-content img {
+        width: 90%;
+        margin: 0 auto;
+    }
 }
 
 /* Footer Styles */
