--- a/mobile-first/mobile-first.css
+++ b/mobile-first/mobile-first.css
@@ -71,12 +71,11 @@ h1, h2, h3, h4, h5 {
 	margin: 0 auto;
 }
 
-
 /* Header Rules */
 
 .container header {
 	border-bottom: 1.5px solid black;
-	padding: 50px 0;
+	padding: 25px 0;
 	margin-bottom: 50px;
 }
 
@@ -87,33 +86,16 @@ header div.header-content {
     justify-content: space-around;
 }
 
-header div.header-content div {
-	width: 50%;
+.header-img {
+	display: none;
 }
 
+@media (min-width: 800px) {
 
-@media (max-width: 800px) {
-    header div.header-content div {
-    	width: 100%;
-        padding-right: 0;
-    }
-
-    .header-img {
-        display: none;
-    }
+	.header-img {
+		display: block;
+	}
 }
-
-@media (max-width: 500px) {
-    header div.header-content div {
-    	width: 100%;
-    }
-
-    .header-img {
-        display: none;
-    }
-}
-
-
 header button {
 	background: white;
 	border: 1px solid black;
@@ -121,7 +103,7 @@ header button {
 	width: 150px;
 	border-radius: 20px;
 	cursor: pointer;
-  transition-duration: 0.5s;
+  	transition-duration: 0.5s;
 	margin-top: 40px;
 }
 
@@ -132,88 +114,88 @@ header button:hover {
 header .slogan {
 	font-size: 75px;
 }
-
 /* Navbar */
 
 
 
 .navbar-container {
 	display: flex;
+	flex-direction: column-reverse;
 	align-items: center;
     margin-bottom: 50px;
 }
 
+@media (min-width: 800px) {
+
+	.navbar-container {
+		flex-direction: row;
+		justify-content: space-between;
+	}
+
+}
+
 .navbar-container nav {
     display: flex;
+	flex-direction: column;
     width: 95%;
     justify-content: space-between;
-
+	margin-top: 25px;
+	text-align: center;
 }
 
-.navbar-container img {
-    margin-left: 120px;
+@media (min-width: 500px) {
+
+	.navbar-container nav {
+		flex-direction: row;
+		justify-content: space-between;
+		text-align: inherit;
+	}
+
 }
-
-@media(max-width: 800px) {
-    .navbar-container {
-        flex-direction: column-reverse;
-    }
-    .navbar-container nav {
-        margin-top: 50px;
-
-    }
-
-    .navbar-container img {
-        margin-left: 0;
-    }
-}
-
-@media(max-width: 500px) {
-    .navbar-container nav{
-        flex-direction: column;
-        text-align: center;
-
-    }
-
-    .navbar-container nav a{
-        padding: 10px 0;
-        border: 1px solid gray;
-        width: 100%;
-    }
-
-    .navbar-container img {
-        margin-left: 0;
-    }
-}
-
 .navbar-container nav a{
 	text-decoration: none;
     color: gray;
+	padding: 10px 0;
+	border: 1px solid gray;
+}
+
+@media (min-width: 500px) {
+
+	.navbar-container nav a{
+		border: none;
+	}
+}
+
+@media (min-width: 800px) {
+
+	.navbar-container img{
+		margin-left: 100px
+	}
+
+
 }
 
 /* Main Content Area */
 
-.main-content .top-content	{
+.main-content .top-content, .bottom-content	{
 	display: flex;
 	padding-bottom: 50px;
+	flex-direction: column;
 }
 
-
-
-@media(max-width: 500px) {
-    .main-content  .top-content, .bottom-content{
-        flex-direction: column;
-    }
-    .main-content  div {
-        margin: 25px;
-    }
+@media(min-width: 500px) {
+	.main-content .top-content, .bottom-content	{
+		display: flex;
+		padding-bottom: 50px;
+		flex-direction: row;
+	}
 }
-
 .main-content .bottom-content {
 	border-bottom: 1.5px solid black;
-	margin: 25px 0;
-	display: flex;
-	padding-bottom: 50px;
+}
+
+.main-content  div {
+	margin-bottom: 25px;
 }
 
 .main-content img {
@@ -221,17 +203,12 @@ header .slogan {
     display: block;
 }
 
-@media(max-width: 500px) {
-    .main-content img {
-        width: 90%;
-        margin: 0 auto;
-    }
-}
 
-/* Footer Styles */
+/* Footer */
 footer {
 	display: flex;
 	flex-direction: column;
+	margin-top: 25px;
 }
 
 footer p {
