--- a/mobile-first/mobile-first.css
+++ b/mobile-first/mobile-first.css
@@ -130,6 +130,7 @@ header .slogan {
 	.navbar-container {
 		flex-direction: row;
 		justify-content: space-between;
+
 	}
 
 }
@@ -137,32 +138,48 @@ header .slogan {
 .navbar-container nav {
     display: flex;
 	flex-direction: column;
-    width: 95%;
+    width: 100%;
     justify-content: space-between;
 	margin-top: 25px;
 	text-align: center;
 }
 
+.navbar-container img {
+	margin-top: 20px;
+}
 @media (min-width: 500px) {
 
 	.navbar-container nav {
 		flex-direction: row;
 		justify-content: space-between;
 		text-align: inherit;
+
 	}
 
 }
+
 .navbar-container nav a{
 	text-decoration: none;
     color: gray;
-	padding: 10px 0;
-	border: 1px solid gray;
+	padding: 10px 0 10px 20px;
+	border-bottom: 1px solid gray;
+	width: 100%;
 }
+
+.navbar-container nav a:nth-child(1) {
+	border-top: 1px solid gray;
+}
+
+
 
 @media (min-width: 500px) {
 
 	.navbar-container nav a{
 		border: none;
+	}
+
+	.navbar-container nav a:nth-child(1) {
+		border-top: none;
 	}
 }
 
@@ -179,14 +196,13 @@ header .slogan {
 
 .main-content .top-content, .bottom-content	{
 	display: flex;
-	padding-bottom: 50px;
 	flex-direction: column;
 }
 
 @media(min-width: 500px) {
 	.main-content .top-content, .bottom-content	{
 		display: flex;
-		padding-bottom: 50px;
+		padding-bottom: 25px;
 		flex-direction: row;
 	}
 }
@@ -201,6 +217,7 @@ header .slogan {
 .main-content img {
 	width: 100%;
     display: block;
+	padding-bottom: 25px;
 }
 
 
